tests/lex/invalid/decimal_literal_extra_underscore.zn
def f() {
    var x = 1__2;
}
